fix: Prefare polish -- Use FreeText to prevent station text wrapping in subheaders (#1956)
* Use FreeText to prevent station text wrapping in subheaders

--- a/assets/css/v2/pre_fare/free_text.scss
+++ b/assets/css/v2/pre_fare/free_text.scss
@@ -54,3 +54,7 @@
     line-height: unset;
   }
 }
+
+.free-text__string--nowrap {
+  white-space: nowrap;
+}
